# Rtype_2019

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt
Component/: AVector.hpp  Acceleration.cpp  IComponent.hpp  Rendering.hpp  Timer.cpp  Timer.hpp
doc/html/: _a_vector_8hpp_source.html  _acceleration_8hpp_source.html  _i_component_8hpp_source.html  _position_8hpp_source.html  _rendering_8hpp_source.html  _timer_8hpp_source.html  _velocity_8hpp_source.html  annotated.html  class_a_vector-members.html  class_a_vector.html  class_acceleration-members.html  class_acceleration.html  class_i_component-members.html  class_i_component.html  class_position-members.html  class_position.html  class_rendering-members.html  class_rendering.html  class_timer-members.html  class_timer.html  class_velocity-members.html  class_velocity.html  classes.html  client_8hpp_source.html  dir_25f19b0ae85c078e0a95db0b0e9a410f.html  dir_3dcac8e6a251c0e6dd8a4a04d07f7043.html  dir_4d126807d0848226f3fbb41e54557d52.html  dir_527734ea8503945c8009a537a9a4fd20.html  dir_76b8ce476d92fc76b4db4590aa0d35e4.html  dir_9730d026351d2d9893383cf169bd3401.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d542da818e2162bbc2a8a92354833c38.html  files.html  hierarchy.html  index.html  server_8hpp_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  searchdata.js
doc/latex/: annotated.tex  class_a_vector.eps  class_a_vector.tex  class_acceleration.eps  class_acceleration.tex  class_i_component.eps  class_i_component.tex  class_position.eps  class_position.tex  class_rendering.eps  class_rendering.tex  class_timer.eps  class_timer.tex  class_velocity.eps  class_velocity.tex  hierarchy.tex  refman.tex
documentation/: protocol_documentation.rfc.txt
documentation/doxygen/html/: _abstract_ecs_8hpp_source.html  _acceleration_8hpp_source.html  _boost_udp_client_8hpp_source.html  _boost_udp_server_8hpp_source.html  _client_8hpp_source.html  _client_data_8hpp_source.html  _client_ecs_8hpp_source.html  _client_engine_8hpp_source.html  _client_main_8hpp_source.html  _client_network_8hpp_source.html  _collide_system_8hpp_source.html  _draw_entity_system_8hpp_source.html  _enemy_8hpp_source.html  _events_8hpp_source.html  _fire_8hpp_source.html  _game_engine_8hpp_source.html  _hitbox_8hpp_source.html  _i_component_8hpp_source.html  _i_entity_8hpp_source.html  _i_moving_entity_8hpp_source.html  _i_render_entity_8hpp_source.html  _i_render_system_8hpp_source.html  _i_session_8hpp_source.html  _i_system_8hpp_source.html  _i_udp_client_8hpp_source.html  _i_udp_server_8hpp_source.html  _menu_8hpp_source.html  _packet_manager_8hpp_source.html  _player_8hpp_source.html  _position_8hpp_source.html  _raw_data_8hpp_source.html  _render_enemy_8hpp_source.html  _render_fire_8hpp_source.html  _render_player_8hpp_source.html  _rendering_8hpp_source.html  _serialized_entity_8hpp_source.html  _server_8hpp_source.html  _server_ecs_8hpp_source.html  _server_network_8hpp_source.html  _session_8hpp_source.html  (+234 more)
documentation/doxygen/latex/: annotated.tex  class_abstract_ecs.tex  class_abstract_ecs.tex.tmp  class_abstract_ecs__inherit__graph.md5  class_acceleration.tex  class_acceleration__inherit__graph.md5  class_boost_udp_client.tex  class_boost_udp_client__inherit__graph.md5  class_boost_udp_server.tex  class_boost_udp_server__coll__graph.md5  class_client.tex  class_client_data.tex  class_client_ecs.tex  class_client_ecs__coll__graph.md5  class_client_engine.tex  class_client_main.tex  class_client_network.tex  class_collide_system.tex  class_collide_system__coll__graph.md5  class_draw_entity_system.tex  class_draw_entity_system__inherit__graph.md5  class_enemy.tex  class_enemy__inherit__graph.md5  class_events.tex  class_fire.tex  class_fire__inherit__graph.md5  class_game_engine.tex  class_hitbox.tex  class_hitbox__coll__graph.md5  class_i_component.tex  class_i_component__inherit__graph.md5  class_i_entity.tex  class_i_entity__inherit__graph.md5  class_i_moving_entity.tex  class_i_moving_entity__coll__graph.md5  class_i_moving_entity__inherit__graph.md5  class_i_render_entity.tex  class_i_render_entity__coll__graph.md5  class_i_render_entity__inherit__graph.md5  class_i_render_system.tex  (+49 more)
server/: server.cpp  server.hpp
server/includes/: server.hpp
server/sources/: main.cpp
source/: IRenderingSystem.hpp  main.cpp
source/client/: Client.cpp  Client.hpp  ClientData.cpp  ClientData.hpp  ClientDataManagement.cpp  ClientDataManagement.hpp  ClientEngine.cpp  ClientEngine.hpp  ClientMain.cpp  ClientMain.hpp  ClientNetwork.cpp  ClientNetwork.hpp  IClientDataManagement.hpp  Menu.cpp  Menu.hpp  client.cpp  client.hpp  main.cpp  player.cpp  player.hpp
source/client/background/: background.cpp  background.hpp
source/client/window/: AWindow.hpp  initWindow.cpp  initWindow.hpp  window.cpp  window.hpp
source/ecs/: AbstractEcs.cpp  AbstractEcs.hpp  ClientEcs.cpp  ClientEcs.hpp  Ecs.cpp  Ecs.hpp  ServerEcs.cpp  ServerEcs.hpp
source/ecs/Component/: AVector.cpp  AVector.hpp  Acceleration.cpp  Acceleration.hpp  Hitbox.cpp  Hitbox.hpp  IComponent.hpp  Position.cpp  Position.hpp  Rendering.cpp  Rendering.hpp  Timer.cpp  Timer.hpp  Vector.cpp  Vector.hpp  Velocity.cpp  Velocity.hpp
source/ecs/Entity/: DestructibleObstacle.hpp  Enemy.hpp  Fire.cpp  Fire.hpp  ICollideEntity.hpp  IEntity.hpp  IMovingEntity.hpp  IParticleEntity.hpp  IRenderEntity.hpp  Player.cpp  Player.hpp  RenderPlayer.cpp  RenderPlayer.hpp  SerializedEntity.cpp  (+2 more)
source/network/: AUdpSocket.hpp  BoostUdpClient.cpp  BoostUdpClient.hpp  BoostUdpServer.cpp  BoostUdpServer.hpp  IUdpClient.hpp  IUdpServer.hpp  Packet.cpp  Packet.hpp  PacketManager.cpp  PacketManager.hpp  RawData.cpp  RawData.hpp
source/server/: ClientManagement.cpp  ClientManagement.hpp  GameEngine.cpp  GameEngine.hpp  GameManagement.cpp  GameManagement.hpp  ISession.hpp  Network.cpp  Network.hpp  Server.cpp  Server.hpp  ServerNetwork.cpp  ServerNetwork.hpp  Session.cpp  Session.hpp  main.cpp
(+80 files in other folders)
